--- a/project5react/photo-share.html
+++ b/project5react/photo-share.html
@@ -9,6 +9,7 @@
         <!-- Insert the model data for the Example widet into the DOM -->
         <script src="modelData/photoApp.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <div id="photoshareapp"></div>
